<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/aboutblack">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/hakerman"/>
        <TextView
            android:id="@+id/rpblack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/repBlack"/>
        <TextView
            android:id="@+id/rpwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/repWhite"/>
        <TextView
            android:id="@+id/subsibes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/Subsribes"/>
    </GridLayout>

        <FrameLayout
            android:id="@+id/framemove"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/firstdisplay">
            <TextView
                android:id="@+id/text2"
                android:layout_width="240dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:textColor="@color/text"
                android:text="//Новости\n//Ситуация"
                android:background="@color/elements">
            </TextView>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/first"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="@string/First"
                    android:textColor="@color/text"
                    android:background="@color/firstdisplay"
                    android:layout_margin="5dp">
">
                </TextView>
                <TextView
                    android:id="@+id/second"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="@string/Second"
                    android:textColor="@color/text"
                    android:background="@color/firstdisplay"
                    android:layout_margin="5dp">
                </TextView>

            </LinearLayout>
                <TextView
                    android:id="@+id/third"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:text="@string/Third"
                    android:textColor="@color/text"
                    android:background="@color/firstdisplay"
                    android:layout_margin="5dp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>